2008-12-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/canvas/canvas_group_grid.cc: create_lines():
	Do not create a GooCanvasGrid with 0 steps, so Glom works with versions 
	of GooCanvas without the bug fix.
	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/303453
	(elmergato)

2008-12-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/combobox_fields.cc: on_cell_data_title(): Pass a ustring to 
	set_property() for the (None) item, so it really shows up. 
	set_property() cannot handle a char* there, it seems.
	For instance, this means that the choices fields can be cleared again.
	This regression probably happened when we first ported Glom to Maemo.
	Bug found by Arq. Maximiliano Meilán.

2008-12-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/box_reports.cc: on_adddel_Add(): Set a default title based on 
	the name, when adding a new report, as we do for tables, relationships, 
	print layouts, etc.

2008-12-05  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/data_structure/glomconversions.h: 
	* glom/libglom/data_structure/glomconversions.cc: Replaced
	get_escaped_binary_data by escape_binary_data_postgres() and
	escape_binary_data_sqlite(). SQLite uses a different format for binary
	data.
	(get_text_for_gda_value): Allow DATE and TIME values to be strings,
	and parse them always in ISO format. This is used for SQLite within
	which we store dates and times as ISO-formatted strings.

	* glom/libglom/data_structure/field.cc (glom_unescape_text): Don't
	unescape double quotes, as they are not escaped in glom_escape_text
	either.
	(sql): Use the escape_binary_data_postgres or
	escape_binary_data_sqlite functions from glomconversions, depending on
	the preferred format.
	(from_sql): Use the unescape_binary_data_postgres or
	unescape_binary_data_sqlite functions from glomconversions, depending
	on the preferred format.

2008-12-04  Murray Cumming  <murrayc@murrayc.com>
